[package]
name = "datular"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
snafu = "0.8"
futures = "0.3"
tokio = { version = "1.43", features = ["full"]}
tokio-stream = { version = "0.1", features = ["fs"] }
tower-http = { version = "0.6", features = ["trace", "metrics"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [] }
bincode = "1"
fastbloom = { version = "0.9", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
envy = "0.4"
